# codesnippets

./: .gitignore
btree/: CMakeLists.txt  bptree.cc  bptree.h  btree.cc  btree.h  btree_test.cc
c-bit-fields/: main.c  run.sh
fluentpython/: htmlize.py  mymax.py  mysum.py  tag.py  vector.py  vector2d.py
fluentpython/async/: blogdom.py  charindex.py  downloads_v1.py  downloads_v2.py  downloads_v3.py  downloads_v4.py  web_mojifinder.py
fluentpython/concurrency/: spinner_async.py
fluentpython/iterator/: arithmetic_progression.py  sentence_gen.py  sentence_genexp.py  sentence_iter.py  sentence_lazy.py  tree.py
fluentpython/meta/: bulkfood_v1.py  bulkfood_v2.py  bulkfood_v3.py  bulkfood_v4.py  frozenjson_v1.py  frozenjson_v2.py  osconfeed.json  schedule.py
fluentpython/pylogging/: commons.py  listener_worker.py  logger_process.py  naive.py
fluentpython/strategy_pattern/: best_promo.py  classic.py  functional.py
go-examples/: go.mod
interview/databricks/: CIDR.py  KVStore.py  SanFranciscoCommute.py  TicTacToe.py
interview/google/: DuplicateElements.py  FindWordsInStream.py  KnockOutTournament.py  MatchTag.py
interview/hrt/: HashMap.py
java-examples/: docker-compose.yaml  init.sql  nginx.conf  pom.xml
java-examples/benchmark/: pom.xml
java-examples/examples/: pom.xml
java-examples/flags/: list.json
java-examples/spi-logger-api/: pom.xml
java-examples/spi-logger-console-impl/: pom.xml
java-examples/spi-logger-file-impl/: pom.xml
lockfree/: CMakeLists.txt  run.sh
lockfree/stack/: CMakeLists.txt  benchmark.cc  hazard_pointer.cc  hazard_pointer.h  stack.h  stack_gc.cc  stack_hp.cc  test.cc
python/: CronExprParser.py  PlaceholderResolver.py  PlaceholderResolver_tests.py  RateLimiter.py  asyncio.ipynb  attrs-lookup.ipynb  bytecode-closure.ipynb  context-manager.ipynb  myer-diff.ipynb  unicode.ipynb
python/algo/: Trie.py  UnionFind.py  binsearch.py  fibtree.py  permutation.py  skiplist.py
python/comments-orm/: adjacent_list.py  nested_set.py
python/interview/: DataWriter.py  LazyArray.py  RunLengthCoder.py  SnapshotIterator.py
python/network/: async.py
python/threading/: RWLock.py
spring-examples/: docker-compose.yaml  init.sql  pom.xml
spring-examples/aop-examples/: pom.xml
sql/: tree.ipynb
sqlalchemy-comments/: basic.py  cte.py  requirements.txt
(+291 files in other folders)
